[project]
name = "onehousing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.3.0",
    "playwright>=1.53.0",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "pytest-playwright>=0.7.0",
    "tqdm>=4.67.1",
]
